# Rust-Embedded

./: Cargo.toml  README.md  comandi utili  openocd.gdb
examples/: concurrency1.rs  concurrency2.rs  concurrency3.rs  concurrency4.rs  concurrency5.rs
src/: concurrency.rs  main.rs
